GetAllRoles Endpoint + postmanfile
